--- a/View/WeatherWindow.xaml
+++ b/View/WeatherWindow.xaml
@@ -4,9 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeatherApp.View"
+        xmlns:vm="clr-namespace:WeatherApp.ViewModel"
         mc:Ignorable="d"
         Title="WeatherWindow" Height="600" Width="400">
-    <Grid>
+
+    <Window.Resources>
+        <vm:WeatherVM x:Key="vm"/>
+    </Window.Resources>
+
+    <Grid DataContext="{StaticResource vm}">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
@@ -14,8 +20,8 @@
         
         <StackPanel Margin="20">
             <TextBlock Text="Search for a city:"/>
-            <TextBox/>
-            <Button Margin="1" Content="Search"/>
+            <TextBox Text="{Binding Query, Mode=TwoWay}"/>
+            <Button Margin="1" Content="Search" Command="{}"/>
             <ListView>
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -34,14 +40,17 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Margin="0,10" Grid.Column="0">
-                <TextBlock Text="Toronto" Foreground="#f4f4f8" 
+                <TextBlock Text="{Binding SearchedCity.LocalizedName}" 
+                           Foreground="#f4f4f8" 
                            FontSize="25" Margin="20,0"/>
-                <TextBlock Text="overcast" Foreground="#f4f4f8" 
+                <TextBlock Text="{Binding CurrentConditions.WeatherText}" 
+                           Foreground="#f4f4f8" 
                            FontSize="18" Margin="20,0"/>
             </StackPanel>
 
             <TextBlock Grid.Column="1" VerticalAlignment="Center"
-                       Text="6 C" Foreground="#f4f4f8" FontSize="31"
+                       Text="{Binding CurrentConditions.Temperature.Metric.Value, StringFormat={}{0}°C}" 
+                       Foreground="#f4f4f8" FontSize="31"
                        Margin="20,0"/>
         </Grid>
         
