--- a/View/WeatherWindow.xaml
+++ b/View/WeatherWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WeatherApp.View"
         xmlns:vm="clr-namespace:WeatherApp.ViewModel"
         xmlns:converters="clr-namespace:WeatherApp.ViewModel.ValueConverters"
         mc:Ignorable="d"
@@ -23,7 +22,8 @@
         <StackPanel Margin="20">
             <TextBlock Text="Search for a city:"/>
             <TextBox Text="{Binding Query, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <Button Margin="1" Content="Search" Command="{Binding SearchCommand}"
+            <Button Margin="0,4,1,10" Width="60" Content="Search" HorizontalAlignment="Left"
+                    Command="{Binding SearchCommand}"
                     CommandParameter="{Binding Query}"/>
             <ListView ItemsSource="{Binding CitiesList}" SelectedValue="{Binding SearchedCity}">
                 <ListView.ItemTemplate>
